working basic frond and backend

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 django = "*"
 django-rest-framework = "*"
 djoser = "*"
+djangorestframework = "*"
+pytz = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
