added styling, frontend login functionality

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ pytz = "*"
 django-cors-headers = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
